--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <input type="text" placeholder="0" id="result" class="form-control p-2 mb-3 align-items-center" readonly>
                     <div class="row row-cols-4 g-2">
                         <div class="col">
-                            <button id="clear" class="btn btn-secondary w-100 up">Ac</button>
+                            <button id="clear" class="btn btn-secondary w-100">Ac</button>
                         </div>
                         <div class="col">
-                            <button id="backspace" class="btn btn-secondary w-100 up">&larr;</button>
+                            <button id="backspace" class="btn btn-secondary w-100">&larr;</button>
                         </div>
                         <div class="col">
-                            <button id="division" class="btn btn-secondary w-100 up">%</button>
+                            <button id="" class="btn btn-secondary w-100 up">%</button>
                         </div>
                         <div class="col">
                             <button id="" class="btn btn-primary w-100 up">/</button>
@@ -72,12 +72,16 @@
                             <button id="" class="btn btn-light w-100 up">.</button>
                         </div>
                         <div class="col-6">
-                            <button id="" class="btn btn-dark w-100 up">=</button>
+                            <button id="equal" class="btn btn-dark w-100">=</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
