--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="https://c8.alamy.com/comp/WJ3674/calculator-and-gear-outline-icon-linear-style-sign-for-mobile-concept-and-web-design-accounting-simple-line-vector-icon-symbol-logo-illustration-WJ3674.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://img.freepik.com/premium-vector/calculator-icon-vector-logo-template_917138-1404.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
